--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.5.0'
 }
